// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact component Should render the Contact component 1`] = `
<DocumentFragment>
  <form
    action="https://formspree.io/meqrwbvd"
    class="c-contact"
    method="POST"
  >
    <button
      class="c-contact__close"
      type="button"
    >
      Close
    </button>
    <div
      class="c-contact__body"
    >
      <h2>
        Send me your message
      </h2>
      <div
        class="c-contact__field"
      >
        <label
          for="email"
        >
          Email:
        </label>
        <input
          id="email"
          name="email"
          required=""
          type="email"
        />
      </div>
      <div
        class="c-contact__field"
      >
        <label
          for="message"
        >
          Message:
        </label>
        <textarea
          cols="30"
          id="message"
          name="message"
          required=""
          rows="10"
        />
      </div>
      <div
        class="g-recaptcha"
        data-sitekey="6LeBnpkhAAAAAC-CeFw7NoOJMDifWeCeTulUuieB"
      />
      <div
        class="c-contact__actions"
      >
        <button
          class="c-btn"
          type="submit"
        >
          Send message
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Contact component Should render the Contact component 2`] = `
<DocumentFragment>
  <form
    action="https://formspree.io/meqrwbvd"
    class="c-contact"
    method="POST"
  >
    <button
      class="c-contact__close"
      type="button"
    >
      Close
    </button>
    <div
      class="c-contact__body"
    >
      <h2>
        Send me your message
      </h2>
      <div
        class="c-contact__field"
      >
        <label
          for="email"
        >
          Email:
        </label>
        <input
          id="email"
          name="email"
          required=""
          type="email"
        />
      </div>
      <div
        class="c-contact__field"
      >
        <label
          for="message"
        >
          Message:
        </label>
        <textarea
          cols="30"
          id="message"
          name="message"
          required=""
          rows="10"
        />
      </div>
      <div
        class="g-recaptcha"
        data-sitekey="6LeBnpkhAAAAAC-CeFw7NoOJMDifWeCeTulUuieB"
      />
      <div
        class="c-contact__actions"
      >
        <button
          class="c-btn"
          type="submit"
        >
          Send message
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Contact component Should render the Contact component 3`] = `
<DocumentFragment>
  <form
    action="https://formspree.io/meqrwbvd"
    class="c-contact"
    method="POST"
  >
    <button
      class="c-contact__close"
      type="button"
    >
      Close
    </button>
    <div
      class="c-contact__body"
    >
      <h2>
        Send me your message
      </h2>
      <div
        class="c-contact__field"
      >
        <label
          for="email"
        >
          Email:
        </label>
        <input
          id="email"
          name="email"
          required=""
          type="email"
        />
      </div>
      <div
        class="c-contact__field"
      >
        <label
          for="message"
        >
          Message:
        </label>
        <textarea
          cols="30"
          id="message"
          name="message"
          required=""
          rows="10"
        />
      </div>
      <div
        class="g-recaptcha"
        data-sitekey="6LeBnpkhAAAAAC-CeFw7NoOJMDifWeCeTulUuieB"
      />
      <div
        class="c-contact__actions"
      >
        <button
          class="c-btn"
          type="submit"
        >
          Send message
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Contact component Should render the Contact component 4`] = `
<DocumentFragment>
  <form
    action="https://formspree.io/meqrwbvd"
    class="c-contact"
    method="POST"
  >
    <button
      class="c-contact__close"
      type="button"
    >
      Close
    </button>
    <div
      class="c-contact__body"
    >
      <h2>
        Send me your message
      </h2>
      <div
        class="c-contact__field"
      >
        <label
          for="email"
        >
          Email:
        </label>
        <input
          id="email"
          name="email"
          required=""
          type="email"
        />
      </div>
      <div
        class="c-contact__field"
      >
        <label
          for="message"
        >
          Message:
        </label>
        <textarea
          cols="30"
          id="message"
          name="message"
          required=""
          rows="10"
        />
      </div>
      <div
        class="g-recaptcha"
        data-sitekey="6LeBnpkhAAAAAC-CeFw7NoOJMDifWeCeTulUuieB"
      />
      <div
        class="c-contact__actions"
      >
        <button
          class="c-btn"
          type="submit"
        >
          Send message
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Contact component Should unmount the Contact component 1`] = `<DocumentFragment />`;

exports[`Contact component Should unmount the Contact component 2`] = `<DocumentFragment />`;

exports[`Contact form submit Successfully submits the form 1`] = `
<DocumentFragment>
  <form
    action="https://formspree.io/meqrwbvd"
    class="c-contact"
    method="POST"
  >
    <button
      class="c-contact__close"
      type="button"
    >
      Close
    </button>
    <div
      class="c-contact__body"
    >
      <div
        class="c-contact__actions"
      >
        <p
          class="c-contact__success"
        >
          Thank you for your message! I will get in touch with you soon.
        </p>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Contact form submit Successfully submits the form 2`] = `
<DocumentFragment>
  <form
    action="https://formspree.io/meqrwbvd"
    class="c-contact"
    method="POST"
  >
    <button
      class="c-contact__close"
      type="button"
    >
      Close
    </button>
    <div
      class="c-contact__body"
    >
      <h2>
        Send me your message
      </h2>
      <div
        class="c-contact__field"
      >
        <label
          for="email"
        >
          Email:
        </label>
        <input
          id="email"
          name="email"
          required=""
          type="email"
        />
      </div>
      <div
        class="c-contact__field"
      >
        <label
          for="message"
        >
          Message:
        </label>
        <textarea
          cols="30"
          id="message"
          name="message"
          required=""
          rows="10"
        />
      </div>
      <div
        class="g-recaptcha"
        data-sitekey="6LeBnpkhAAAAAC-CeFw7NoOJMDifWeCeTulUuieB"
      />
      <div
        class="c-contact__actions"
      >
        <button
          class="c-btn"
          type="submit"
        >
          Send message
        </button>
        <p
          class="c-contact__error"
        >
          Mocked error
        </p>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Contact form submit Successfully submits the form 3`] = `
<DocumentFragment>
  <form
    action="https://formspree.io/meqrwbvd"
    class="c-contact"
    method="POST"
  >
    <button
      class="c-contact__close"
      type="button"
    >
      Close
    </button>
    <div
      class="c-contact__body"
    >
      <h2>
        Send me your message
      </h2>
      <div
        class="c-contact__field"
      >
        <label
          for="email"
        >
          Email:
        </label>
        <input
          id="email"
          name="email"
          required=""
          type="email"
        />
      </div>
      <div
        class="c-contact__field"
      >
        <label
          for="message"
        >
          Message:
        </label>
        <textarea
          cols="30"
          id="message"
          name="message"
          required=""
          rows="10"
        />
      </div>
      <div
        class="g-recaptcha"
        data-sitekey="6LeBnpkhAAAAAC-CeFw7NoOJMDifWeCeTulUuieB"
      />
      <div
        class="c-contact__actions"
      >
        <button
          class="c-btn"
          type="submit"
        >
          Send message
        </button>
        <p
          class="c-contact__error"
        >
          Something went wrong. Please try again.
        </p>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
